// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputUnstyled when asked to render autofocused matches snapshot 1`] = `
<input
  aria-disabled={false}
  aria-errormessage="test-inputErrorMessage"
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={true}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  readOnly={false}
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render disabled matches snapshot 1`] = `
<input
  aria-disabled={true}
  aria-errormessage="test-inputErrorMessage"
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={true}
  id="test-input"
  name="test-input"
  readOnly={false}
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render matches the snapshot 1`] = `
<input
  aria-disabled={false}
  aria-errormessage="test-inputErrorMessage"
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  readOnly={false}
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render required matches snapshot 1`] = `
<input
  aria-disabled={false}
  aria-errormessage="test-inputErrorMessage"
  aria-invalid={false}
  aria-label="Test label"
  aria-required={true}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  readOnly={false}
  required={true}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render with placeholder matches snapshot 1`] = `
<input
  aria-disabled={false}
  aria-errormessage="test-inputErrorMessage"
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  placeholder="Test placeholder"
  readOnly={false}
  required={false}
  type="text"
/>
`;

exports[`InputUnstyled when asked to render with value matches snapshot 1`] = `
<input
  aria-disabled={false}
  aria-errormessage="test-inputErrorMessage"
  aria-invalid={false}
  aria-label="Test label"
  aria-required={false}
  autoFocus={false}
  className="[appearance:textfield] [&::-webkit-outer-spin-button]:appearance-none [&::-webkit-inner-spin-button]:appearance-none"
  data-invalid={false}
  data-test-id="test-input"
  disabled={false}
  id="test-input"
  name="test-input"
  onChange={[Function]}
  readOnly={false}
  required={false}
  type="text"
  value="Test value"
/>
`;
